Flowmini/flowmini_v23_token_tree_parser_bridge/examples/fail/bad_uninitialized_structured.flow
program bad_uninitialized_structured

main {
    one : int
}
